--- a/employees_earning_exercise/Makefile
+++ b/employees_earning_exercise/Makefile
@@ -1,9 +1,8 @@
 include ../../../docker.mk
 
-SOLUTION:=$(shell sed -n '/^-- BEGIN*$$/,/^-- END*$$/{/^-- BEGIN*$$/b;/^-- END*$$/b;p}' $(CURDIR)/exercise/solution.sql)
 
-build: gen_function
+SOLUTION:=`cat $(CURDIR)/exercise/solution.sql`
 
-gen_function:
-	rm -f $(CURDIR)/postgresql_init/solution_func.sql
-	echo "CREATE OR REPLACE FUNCTION solution() RETURNS table(Name varchar(10)) AS '$(SOLUTION)' LANGUAGE SQL" >> $(CURDIR)/postgresql_init/solution_func.sql
+gen_solution_function:
+	echo "CREATE OR REPLACE FUNCTION solution() RETURNS table(name varchar(10)) AS '$(SOLUTION)' LANGUAGE SQL;" > $(CURDIR)/solution.sql
+
